# zigen-playground

./: .gitignore  README.md  meson.build
.github/workflows/: test.yml
client/: meson.build
client/include/: zigen-playground.h
client/main/: main.cc  meson.build  pedestal.cc  pedestal.frag  pedestal.h  pedestal.vert  window.cc  window.h
client/playground/: client.h  cuboid-view.cc  cuboid-view.h  dnd-message-parser.cc  dnd-message-parser.h  dnd-message.h  fifo.h  image-downloader.cc  image-downloader.h  meson.build  model.h  playground-view.cc  playground-view.h  playground.cc  ray-view.cc  ray-view.h  ray.vert  sphere-textured.frag  sphere-view.cc  sphere-view.h  sphere.vert
client/playground/client/: client-impl.cc  client-impl.h  client.cc  meson.build  message-parser.cc  message-parser.h  message.h  messaging.cc  messaging.h
client/playground/client/message/: error.cc  error.h  helper.h  new-resource-event.cc  new-resource-event.h  new-resource-request.cc  new-resource-request.h  new-texture-event.cc  new-texture-event.h  new-texture-request.cc  new-texture-request.h  noop-event.cc  noop-event.h  sync-event.cc  sync-event.h  sync-request.cc  sync-request.h  update-geom-event.cc  update-geom-event.h  update-geom-request.cc  update-geom-request.h  update-ray-event.cc  update-ray-event.h  update-ray-request.cc  update-ray-request.h
client/protocol/: meson.build
client/sample/: main.cc  meson.build
server/: .eslintrc.js  .gitignore  .prettierrc.js  DevPlugin.js  index.ts  package.json  router.ts  tsconfig.json  webpack.config.js
server/config/: log4js.json
server/controller/: new_resource.ts  new_texture.ts  sync.ts  update_geom.ts  update_ray.ts
server/event/: all-resources.ts  new_resource.ts  new_texture.ts  noop.ts  sync.ts  update_geom.ts  update_ray.ts
server/front/: App.tsx  index.tsx  palette.ts
server/front/component/: DataTypeSelector.tsx  DraggablePrimitiveCard.tsx  DraggableTextureCard.tsx  Header.tsx  Primitives.tsx  Textures.tsx
server/front/static/: index.html
server/math/: vector.ts
server/message/: message.ts  sync.ts
server/model/: client.ts  playground.ts  resource.ts  user.ts
server/model/resource/: cuboid.ts  sphere.ts
server/request/: new_resource.ts  new_texture.ts  request.ts  sync.ts  update_geom.ts  update_ray.ts
server/test/: client.ts  sync.ts
